force-app/main/default/objects/TT_Build_Item__c/TT_Build_Item__c.object-meta.xml
<CustomObject>
    <label>TT Build Item</label>
    <nameField>
        <label>TT Build Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TT Build Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>