force-app/main/default/objects/TT_Build_Item__c/fields/Admin_Owner__c.field-meta.xml
<CustomField>
    <fullName>Admin_Owner__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TT_Build_Items</relationshipName>
    <type>Lookup</type>
</CustomField>