force-app/main/default/objects/TT_Build_Item__c/fields/Alternatives_Considered__c.field-meta.xml
<CustomField>
    <fullName>Alternatives_Considered__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Alternatives Considered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>