force-app/main/default/objects/TT_Build_Item__c/fields/Associated__c.field-meta.xml
<CustomField>
    <fullName>Associated__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Associated Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>