force-app/main/default/objects/TT_Build_Item__c/fields/Automation_Platform__c.field-meta.xml
<CustomField>
    <fullName>Automation_Platform__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Automation Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>