force-app/main/default/objects/TT_Build_Item__c/fields/Blocking_Work_Items__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Work_Items__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Blocking Work Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>