force-app/main/default/objects/TT_Build_Item__c/fields/Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Business Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>