force-app/main/default/objects/TT_Build_Item__c/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Change Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>