force-app/main/default/objects/TT_Build_Item__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Component Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>