force-app/main/default/objects/TT_Build_Item__c/fields/Component_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_API_Name__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Component API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>