force-app/main/default/objects/TT_Build_Item__c/fields/Date_Pushed_to_Prod__c.field-meta.xml
<CustomField>
    <fullName>Date_Pushed_to_Prod__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Date Pushed to Prod</label>
    <type>Date</type>
</CustomField>