force-app/main/default/objects/TT_Build_Item__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TT_Build_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>