force-app/main/default/objects/TT_Build_Item__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Default Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>