force-app/main/default/objects/TT_Build_Item__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>