force-app/main/default/objects/TT_Build_Item__c/fields/Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Method__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Deployment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DevOps Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>