force-app/main/default/objects/TT_Build_Item__c/fields/Documentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Documentation_URL__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>