force-app/main/default/objects/TT_Build_Item__c/fields/Follow_Up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Needed__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Follow Up Needed</label>
    <type>Checkbox</type>
</CustomField>