force-app/main/default/objects/TT_Build_Item__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>