force-app/main/default/objects/TT_Build_Item__c/fields/New_Or_Update__c.field-meta.xml
<CustomField>
    <fullName>New_Or_Update__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>New Or Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Existing-No Build Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>