force-app/main/default/objects/TT_Build_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>