force-app/main/default/objects/TT_Build_Item__c/fields/Prerequisite_Rows__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Rows__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Prerequisite Rows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>