force-app/main/default/objects/TT_Build_Item__c/fields/Related_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Item__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Item</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>TT Build Items</relationshipLabel>
    <relationshipName>TT_Build_Items</relationshipName>
    <type>Lookup</type>
</CustomField>