force-app/main/default/objects/TT_Build_Item__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>