force-app/main/default/objects/TT_Build_Item__c/fields/Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Date__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Revisit Date</label>
    <type>Date</type>
</CustomField>