force-app/main/default/objects/TT_Build_Item__c/fields/Rollback_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Plan__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Rollback Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>