force-app/main/default/objects/TT_Build_Item__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Sequence Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>