force-app/main/default/objects/TT_Build_Item__c/fields/SF_Area__c.field-meta.xml
<CustomField>
    <fullName>SF_Area__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>SF Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>