force-app/main/default/objects/TT_Build_Item__c/fields/SF_Description__c.field-meta.xml
<CustomField>
    <fullName>SF_Description__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>SF Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>