force-app/main/default/objects/TT_Build_Item__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>TT Build Items</relationshipLabel>
    <relationshipName>TT_Build_Items</relationshipName>
    <type>Lookup</type>
</CustomField>