force-app/main/default/objects/TT_Build_Item__c/fields/Technical_Solution__c.field-meta.xml
<CustomField>
    <fullName>Technical_Solution__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <label>Technical Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>