force-app/main/default/objects/TT_Build_Item__c/fields/TT_Automation__c.field-meta.xml
<CustomField>
    <fullName>TT_Automation__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TT Automation</label>
    <referenceTo>TT_Automation__c</referenceTo>
    <relationshipLabel>TT Build Items (TT Automation)</relationshipLabel>
    <relationshipName>TT_Build_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>