force-app/main/default/objects/TT_Build_Item__c/fields/TT_Automationa__c.field-meta.xml
<CustomField>
    <fullName>TT_Automationa__c</fullName>
    <label>TT Automationa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>