force-app/main/default/objects/TT_Build_Item__c/recordTypes/Architecture_Decision.recordType-meta.xml
<RecordType>
    <fullName>Architecture_Decision</fullName>
    <active>true</active>
    <label>Architecture Decision</label>
</RecordType>