force-app/main/default/objects/TT_Build_Item__c/recordTypes/Automation_Log.recordType-meta.xml
<RecordType>
    <fullName>Automation_Log</fullName>
    <active>true</active>
    <label>Automation Log</label>
</RecordType>