force-app/main/default/objects/TT_Build_Item__c/recordTypes/Build_Log.recordType-meta.xml
<RecordType>
    <fullName>Build_Log</fullName>
    <active>true</active>
    <label>Build Log</label>
</RecordType>